[project]
name = "dotenv.pth"
version = "1.0"
description = "call `load_dotenv()` when python starts"
readme = "README.md"
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
license = { text = "MIT" }
dependencies = ["python-dotenv"]
urls = { Repository = "https://github.com/CNSeniorious000/dotenv.pth" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "src"
includes = ["src/*load_dotenv*"]
